update UI dikit

--- a/Mobile/gignego_new/pubspec.yaml
+++ b/Mobile/gignego_new/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   mime: ^1.0.4
   path: ^1.8.3
   sqflite: ^2.0.0+4
+  smooth_page_indicator: ^1.0.0
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
