--- a/Mobile/gignego_new/pubspec.yaml
+++ b/Mobile/gignego_new/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   cloud_firestore: ^5.6.6
   mime: ^1.0.4
   path: ^1.8.3
+  timeago: ^3.3.0
   sqflite: ^2.0.0+4
   smooth_page_indicator: ^1.0.0
 
