--- a/Mobile/gignego_new/pubspec.yaml
+++ b/Mobile/gignego_new/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  qr_flutter: ^4.0.0
   http: ^1.3.0
   intl: ^0.20.2
   google_fonts: ^6.1.0
